--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "css-loader": "^0.28.7",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.4",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
     "react": "^16.4.1",
