--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-hot-middleware": "^2.22.3"
   },
   "dependencies": {
     "antd": "^3.7.0",
@@ -29,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.18.3",
     "css-loader": "^0.28.7",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
