--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "cross-env NODE_ENV=development webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.1",
+    "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "happypack": "^4.0.1",
     "html-webpack-plugin": "^2.30.1",
@@ -32,9 +30,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
+    "ejs": "^2.6.1",
+    "ejs-loader": "^0.3.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "file-loader": "^1.1.11",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.4",
     "node-sass": "^4.7.2",
