--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
+    "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "ejs": "^2.6.1",
@@ -40,8 +41,10 @@
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.4",
+    "multiparty": "^4.1.4",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
+    "qiniu": "^7.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
