--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "cross-env": "^5.1.1",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "happypack": "^4.0.1",
     "html-webpack-plugin": "^2.30.1",
     "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "antd": "^3.7.0",
@@ -33,7 +28,6 @@
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "ejs": "^2.6.1",
-    "ejs-loader": "^0.3.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.11",
