--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
-    "antd": "^3.7.0",
+    "ali-oss": "^6.1.1",
+    "antd": "^3.23.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
